--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-crispy-forms==2.0
 djangorestframework==3.14.0
 gunicorn==21.2.0
 packaging==23.2
+psycopg2-binary==2.9.5
 python-decouple==3.8
 pytz==2023.3.post1
 sqlparse==0.4.4
