--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
 Brotli==1.0.9
+decouple==0.0.7
+dj-database-url==2.1.0
 Django==4.2.5
 django-autoslug==1.9.9
 django-crispy-forms==2.0
