--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ gunicorn==21.2.0
 packaging==23.2
 psycopg2-binary==2.9.5
 python-decouple==3.8
+python-dotenv==0.21.0
 pytz==2023.3.post1
 sqlparse==0.4.4
 typing_extensions==4.8.0
